upgrade java version and all other dependencies modify tests to work with junit 5
JU-271